[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/SoundFX/door_close.mp3" type="AudioStream" id=1]
[ext_resource path="res://Objects/Template Objects/ExitArea.gd" type="Script" id=2]
[ext_resource path="res://Assets/SoundFX/door_locked.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="ExitArea" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="ExitShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="BlockedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="input_event" from="." to="." method="_on_ExitArea_input_event"]
[connection signal="finished" from="ExitSound" to="." method="_on_ExitSound_finished"]
